Refactor code for immutability, clarity, and consistency
Refactored various classes to use `final` modifiers for fields, improved stream usage by employing method references, and replaced deprecated methods with modern equivalents. Simplified loops and lambdas for better readability and maintained consistent coding standards across files.